--- a/roles/provision-fh-sync-server-apb/defaults/main.yml
+++ b/roles/provision-fh-sync-server-apb/defaults/main.yml
@@ -1,4 +1,4 @@
 fhsync_deploy_template: "https://raw.githubusercontent.com/feedhenry/fh-sync-server/master/fh-sync-server-DEVELOPMENT.yaml"
 fhsync_port: "3000"
-fhsync_secret_display_name: "fhsync"
+fhsync_secret_name: "fh-sync-server"
 
