--- a/roles/provision-fh-sync-server-apb/tasks/main.yml
+++ b/roles/provision-fh-sync-server-apb/tasks/main.yml
@@ -1,3 +1,10 @@
+- name: "Get the name of the service instance"
+  shell: oc get serviceinstance --namespace={{ namespace }} -o jsonpath='{.items[?(@.spec.externalID=="{{ _apb_service_instance_id }}")].metadata.name}'
+  register: service_instance_name
+
+- name: "Label the service instance with the service name"
+  shell: oc label serviceinstance '{{ service_instance_name.stdout }}' serviceName=fh-sync-server --namespace={{ namespace }}
+
 - name: "Create fh-sync-server deploy yaml file"
   template:
     src: deploy.yml.j2
