--- a/roles/provision-fh-sync-server-apb/tasks/main.yml
+++ b/roles/provision-fh-sync-server-apb/tasks/main.yml
@@ -1,9 +1,11 @@
 - name: "Get the name of the service instance"
   shell: oc get serviceinstance --namespace={{ namespace }} -o jsonpath='{.items[?(@.spec.externalID=="{{ _apb_service_instance_id }}")].metadata.name}'
+  when: _apb_service_instance_id is defined
   register: service_instance_name
 
 - name: "Label the service instance with the service name"
   shell: oc label serviceinstance '{{ service_instance_name.stdout }}' serviceName=fh-sync-server --namespace={{ namespace }}
+  when: _apb_service_instance_id is defined
 
 - name: "Create fh-sync-server deploy yaml file"
   template:
