--- a/roles/deprovision-fh-sync-server-apb/tasks/main.yml
+++ b/roles/deprovision-fh-sync-server-apb/tasks/main.yml
@@ -1,14 +1,42 @@
-- name: delete fh-sync-server resource
-  command: oc delete {{ item }} fh-sync-server -n {{ namespace }}
+- name: delete route
+  openshift_v1_route:
+    name: '{{ sync_server_route_name }}'
+    namespace: '{{ namespace }}'
+    state: absent
+
+- name: delete services
+  k8s_v1_service:
+    name: '{{ item }}'
+    namespace: '{{ namespace }}'
+    state: absent
   with_items:
-    - service
-    - route
-- name: delete sync-redis resoures
-  command: oc delete {{ item }} redis -n {{ namespace }}
+  - fh-sync-server
+  - mongodb
+  - redis
+
+- name: delete deployments
+  k8s_apps_v1beta1_deployment:
+    name: '{{ item }}'
+    namespace: '{{ namespace }}'
+    state: absent
   with_items:
-    - service
-- name: delete sync-mongo resoures
-  command: oc delete {{ item }} mongodb -n {{ namespace }}
+  - fh-sync-server
+  - mongodb
+  - redis
+
+- name: delete secrets
+  k8s_v1_secret:
+    name: '{{ item }}'
+    namespace: '{{ namespace }}'
+    state: absent
   with_items:
-    - service
-    - secret
+  - fh-sync-server
+  - mongodb
+
+- name: delete persistent volume claims
+  k8s_v1_persistent_volume_claim:
+    name: '{{ item }}'
+    namespace: '{{ namespace }}'
+    state: absent
+  with_items:
+  - mongodb
